[gd_scene load_steps=22 format=3 uid="uid://ccsu2er238wo6"]

[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_config_button.gd" id="1_p3eq6"]
[ext_resource type="Script" path="res://scripts/new_ui/panels/base/expanding_panel.gd" id="1_um2c1"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/expand_light_config_button.gd" id="3_ecn13"]
[ext_resource type="Texture2D" uid="uid://bsbp1i4e881g4" path="res://assets/UI 2D/Icons/Expanded Light Customization/Light Expand/V2/LightExpansion_Out_White_V2.svg" id="4_lxyto"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_strength_scrollbar.gd" id="5_dxtfb"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_value_scrollbar.gd" id="5_rfsx3"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_config_color_picker.gd" id="5_ycabp"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_angle_scrollbar.gd" id="6_e7rxa"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/light_hex_text_edit.gd" id="6_o78tx"]
[ext_resource type="Script" path="res://scripts/new_ui/light_config/delete_light_button.gd" id="10_albex"]
[ext_resource type="Texture2D" uid="uid://v5ktf2y250s4" path="res://assets/UI 2D/Icons/Expanded Light Customization/Trash/Trash_White_V1.svg" id="11_dq7r0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0m86o"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Curve" id="Curve_jfoxp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yickx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qah2i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okix6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qa24"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ths8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ufuk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mknd"]
bg_color = Color(0.85098, 0.85098, 0.85098, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgqtv"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.686275, 0.686275, 0.686275, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="light_config_button" type="MarginContainer"]
offset_right = 260.0
offset_bottom = 60.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 5
script = ExtResource("1_p3eq6")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
custom_minimum_size = Vector2(250, 490)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0m86o")
script = ExtResource("1_um2c1")
expand_direction = 0
minimized_size = 45.0
maximized_size = 490.0
animation_speed = 0.1
animation_curve = SubResource("Curve_jfoxp")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 9.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/VBoxContainer" node_paths=PackedStringArray("parent_panel", "parent_config_button")]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_yickx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qah2i")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_okix6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3qa24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ths8o")
script = ExtResource("3_ecn13")
parent_panel = NodePath("../../..")
parent_config_button = NodePath("../../../..")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="inner" type="Panel" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(23, 23)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ufuk")

[node name="outer" type="Panel" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0mknd")

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Light One"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 25

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/VBoxContainer/Button/HBoxContainer2/HBoxContainer2/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("4_lxyto")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -40

[node name="ColorPicker" type="ColorPicker" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/sv_width = 175
theme_override_constants/sv_height = 175
theme_override_constants/h_width = 0
picker_shape = 2
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false
script = ExtResource("5_ycabp")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 25

[node name="value_scroll_bar" type="VScrollBar" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("5_rfsx3")

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15

[node name="TextEdit" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(210, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "#FFFFFF"
max_length = 7
script = ExtResource("6_o78tx")

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Strength"

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 10

[node name="strength_scroll_bar" type="HScrollBar" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0
value = 335.0
script = ExtResource("5_dxtfb")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_right = 25

[node name="light_strength_label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sgqtv")
text = ".335"

[node name="MarginContainer5" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Angle
"

[node name="MarginContainer6" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 10

[node name="angle_scroll_bar" type="HScrollBar" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
max_value = 90.0
value = 90.0
script = ExtResource("6_e7rxa")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_right = 25

[node name="light_angle_label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/MarginContainer6/HBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sgqtv")
text = "135°
"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="delete_light_button" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer" node_paths=PackedStringArray("light_config_button")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
script = ExtResource("10_albex")
light_config_button = NodePath("../../../../../..")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/delete_light_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/delete_light_button/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/delete_light_button/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
texture = ExtResource("11_dq7r0")
expand_mode = 5

[connection signal="color_changed" from="Panel/VBoxContainer/VBoxContainer/MarginContainer/ColorPicker" to="Panel/VBoxContainer/VBoxContainer/MarginContainer/ColorPicker" method="_on_color_changed"]
[connection signal="focus_exited" from="Panel/VBoxContainer/VBoxContainer/MarginContainer2/TextEdit" to="Panel/VBoxContainer/VBoxContainer/MarginContainer2/TextEdit" method="_on_focus_exited"]
[connection signal="text_changed" from="Panel/VBoxContainer/VBoxContainer/MarginContainer2/TextEdit" to="Panel/VBoxContainer/VBoxContainer/MarginContainer2/TextEdit" method="_on_text_changed"]
